<resources>
    <string name="app_name">FilmQuiz</string>
    <string name="question">Question</string>
    <string name="button_true">VRAI</string>
    <string name="button_false">FAUX</string>
    <string name="button_restart">Rejouer</string>
    <string name="score">Score : %d</string>
    <string name="end">Le jou a terminé, t\'a ammasé un score de : %d points.</string>
    <string name="answerOK">Correct!</string>
    <string name="answerNOK">Faux!</string>
    <string name="question_ai">Artificial Intelligence : AI is a film directed by Steven Spielberg</string>
    <string name="question_taxi_driver">Taxi Driver is a film directed by Martin Scorsese</string>
    <string name="question_2001">2001 : A space Odyssey is a film directed by Alfred Hitchcock</string>
    <string name="question_reservoir_dogs">Reservoir dogs is a film directed by Quentin Tarantino</string>
    <string name="question_citizen_kane">Citizen Kane is a film directed by Luc Besson</string>
</resources>